generic-datatable/objects/Datatable_Column_Setting__c.object
<CustomObject>
    <fields>
        <fullName>Column_API__c</fullName>
        <label>Column API</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Column_Type__c</fullName>
        <label>Column Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>text</fullName>
                </value>
                <value>
                    <fullName>number</fullName>
                </value>
                <value>
                    <fullName>currency</fullName>
                </value>
                <value>
                    <fullName>date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Datatable_Object_Setting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Datatable Object Setting</label>
        <referenceTo>Datatable_Object_Setting__c</referenceTo>
        <relationshipLabel>Datatable Column Settings</relationshipLabel>
        <relationshipName>Datatable_Column_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieldName__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Object_API__c</fullName>
        <label>Parent Object API</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Datatable Column Setting</label>
    <nameField>
        <label>Column Label</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Datatable Column Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>